--- a/db.conf
+++ b/db.conf
@@ -1,17 +1,20 @@
+[default]
+host = postgres.example.com
+port = 5432
+dbname = public
+user = readonly
+password = readme
+
 [postgres]
 host = postgres.example.com
 port = 5432
 dbname = public
 su_user = admin
 su_password = password
-read_user = readonly
-read_password = readme
 
 [redshift]
 host = redshift.example.com
 port = 5439
 dbname = public
-su_user = admin
-su_password = password
-read_user = readonly
-read_password = readme
+user = admin
+password = password
