--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,41 @@
+Cython==0.21.1
 Jinja2==2.7.3
 MarkupSafe==0.23
+Pygments==2.0.1
+SQLAlchemy==0.9.8
+boto==2.34.0
 certifi==14.05.14
+configobj==5.0.6
 configparser==3.5.0b2
 db.py==0.3.2
+decorator==3.4.0
 folium==0.1.2
 gnureadline==6.3.3
-ipython==2.3.1
+ipython==3.0.0-dev
+jsonschema==2.4.0
+matplotlib==1.4.2
+matplotlib-venn==0.10
+mistune==0.4.1
+mpld3==0.2
+networkx==1.9.1
+nltk==3.0.0
+nose==1.3.4
 numpy==1.9.1
 pandas==0.15.1
+patsy==0.3.0
+powerlaw==1.3
 prettytable==0.7.2
 psycopg2==2.5.4
+pyparsing==2.0.3
 python-dateutil==2.2
 pytz==2014.9
 pyzmq==14.4.1
+qgrid==0.1.1
+scikit-learn==0.15.2
+scipy==0.14.0
+seaborn==0.5.1
+simplejson==3.6.5
 six==1.8.0
+statsmodels==0.6.0
 tornado==4.0.2
+vincent==0.4.4
